--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -45,13 +45,52 @@ h6 {
   line-height: normal;
 }
 
-/* Navbar Css */
 /* .navigation {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-left: 65px;
 } */
+
+/* Skill Section */
+.skill {
+  padding: 0 0 50px 0;
+  position: relative;
+}
+.skill-bx {
+  background: #151515;
+  border-radius: 64px;
+  text-align: center;
+  padding: 60px 50px;
+  margin-top: -60px;
+}
+.skill h2 {
+  font-size: 45px;
+  font-weight: 700;
+}
+.skill p {
+  color: #b8b8b8;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px 0 75px 0;
+}
+.skill-slider {
+  width: 80;
+  margin: 0 auto;
+  position: relative;
+}
+.skill-slider .item img {
+  width: 50%;
+  margin: 0 auto 15px auto;
+}
+.background-image-left {
+  top: 20%;
+  position: absolute;
+  bottom: 0;
+  width: 40%;
+}
+/* Navbar Css */
 nav.navbar {
   padding: 18px 0;
   position: fixed;
